moved to ancestry gem

--- a/app/views/folders/_form.html.haml
+++ b/app/views/folders/_form.html.haml
@@ -9,7 +9,7 @@
 
   .form-inputs
     = f.input :name
-    = f.hidden_field :parent_id, value: @parent
+    = f.hidden_field :parent_id
 
   .form-actions
     = f.button :submit
