--- a/app/views/folders/show.html.haml
+++ b/app/views/folders/show.html.haml
@@ -1,20 +1,30 @@
-%h1= "Folder #{@folder.name}"
-%ul
-  - if @folder.parent_folder
-    %li
-      = link_to folder_path(@folder.parent_folder) do
-        = image_tag image_path('mini_folder.png')
-      = link_to 'back', folder_path(@folder.parent_folder)
-  - @folder.child_folders.each do |folder|
-    %li
-      = link_to folder_path(folder) do
-        = image_tag image_path('mini_folder.png')
-      = link_to folder.name, folder_path(folder)
-  - @folder.documents.each do |doc|
-    %li
-      = link_to doc.file_url do
-        = image_tag image_path('mini_file.png')
-      = link_to doc.file_identifier, doc.file_url
+.container
+  .col-md-12
+    %br
+    .breadcrumb
+      - @folder.ancestors.each do |folder|
+        = link_to folder.name, folder_path(folder)
+        &gt;
+      = @folder.name
+  .col-md-2
+    = link_to 'New document', new_document_path(folder: @folder), class: "btn btn-xs btn-primary"
+    = link_to 'New folder', new_folder_path(parent_id: @folder), class: "btn btn-xs btn-primary"
+  .col-md-10
+    %ul
+      - if @folder.parent_id
+        %li
+          = link_to folder_path(@folder.parent_id) do
+            = image_tag image_path('mini_folder.png')
+          = link_to 'back', folder_path(@folder.parent_id)
+      - @folder.children.each do |folder|
+        %li
+          = link_to folder_path(folder) do
+            = image_tag image_path('mini_folder.png')
+          = link_to folder.name, folder_path(folder)
+      - @folder.documents.each do |doc|
+        %li
+          = link_to doc.file_url do
+            = image_tag image_path('mini_file.png')
+          = link_to doc.file_identifier, doc.file_url
 
-= link_to 'New document', new_document_path(folder: @folder), class: "btn btn-primary"
-= link_to 'New folder', new_folder_path(folder: @folder), class: "btn btn-primary"
+
