--- a/app/views/folders/index.html.haml
+++ b/app/views/folders/index.html.haml
@@ -1,10 +1,10 @@
 %h1 Listing folders
 
-%ul
+%ul.ca-menu
   - @folders.each do |folder|
     %li
       = link_to folder_path(folder) do
         = image_tag image_path('mini_folder.png')
-      = link_to folder.name, folder_path(folder)
+        = folder.name
 
 = link_to 'New Folder', new_folder_path, class: "btn btn-primary"
