--- a/app/views/folders/show.html.haml
+++ b/app/views/folders/show.html.haml
@@ -7,24 +7,26 @@
         &gt;
       = @folder.name
   .col-md-2
-    = link_to 'New document', new_document_path(folder: @folder), class: "btn btn-xs btn-primary"
-    = link_to 'New folder', new_folder_path(parent_id: @folder), class: "btn btn-xs btn-primary"
+    = link_to 'New document', new_document_path(folder: @folder),  {:remote => true, :data => { :toggle => 'modal', :target => '#modal-new-doc'},  :class => 'btn'}
+    = link_to "new folder", new_folder_path(parent_id: @folder),  {:remote => true, :data => { :toggle => 'modal', :target => '#modal-new-folder'},  :class => 'btn'}
   .col-md-10
-    %ul
+    %ul.listing
       - if @folder.parent_id
         %li
           = link_to folder_path(@folder.parent_id) do
             = image_tag image_path('mini_folder.png')
-          = link_to 'back', folder_path(@folder.parent_id)
+            = '.. back'
       - @folder.children.each do |folder|
         %li
           = link_to folder_path(folder) do
             = image_tag image_path('mini_folder.png')
-          = link_to folder.name, folder_path(folder)
+            = folder.name
       - @folder.documents.each do |doc|
         %li
           = link_to doc.file_url do
             = image_tag image_path('mini_file.png')
-          = link_to doc.file_identifier, doc.file_url
+            = doc.file_identifier
+= render 'modal_new_doc'
+= render 'modal_new_folder'
 
 
