--- a/app/views/documents/_form.html.haml
+++ b/app/views/documents/_form.html.haml
@@ -6,4 +6,4 @@
     = f.hidden_field :folder_id
 
   .form-actions
-    = f.button :submit, class: "btn btn-success"
+    = f.button :submit, class: "btn"
