--- a/app/assets/stylesheets/folders.sass
+++ b/app/assets/stylesheets/folders.sass
@@ -1,3 +1,6 @@
+@import 'variables'
+@import 'mixins'
+
 .listing
   padding: 0
 
@@ -35,24 +38,14 @@
   transition: all 300ms linear
 
 .listing li:hover
-  border-color: #fff004
+  border-color: $yellow
   background: #000
 
 .listing li:hover a
-  color: #fff004
-  text-shadow: 0px 0px 1px #fff004
+  color: $yellow
+  text-shadow: 0px 0px 1px $yellow
   text-decoration: none
   font-size: 24px
-
-@mixin rounded($radius:4px)
-  -webkit-border-radius : $radius
-  -moz-border-radius : $radius
-  border-radius : $radius
-
-$white  : #fff
-$yellow : #333
-$black  : #111
-
 
 .btn
   display: inline-block
@@ -72,3 +65,6 @@ $black  : #111
 
 .breadcrumb
   font-size: 18
+
+.menu_opt
+  margin-top: 5px
