--- a/app/views/documents/index.html.haml
+++ b/app/views/documents/index.html.haml
@@ -3,18 +3,21 @@
 %table.table.table-bordered
   %tr
     %th Name
-    %th file
+    %th folder
     %th creation date
-
+    %th Actions
 
   - @documents.each do |doc|
     %tr
+      %td= file_link(doc)
       %td
-        = image_tag image_path('mini_file.png')
-        = doc.name
-      %td= link_to doc.file_identifier, doc.file_url
-      %td= doc.created_at
+        - doc.folder.ancestors.each do |folder|
+          = link_to folder.name, folder_path(folder)
+          &gt;
+        = link_to doc.folder.name, folder_path(doc.folder)
+      %td= doc.created_at.to_formatted_s(:long)
+      %td
+        = link_to 'Delete', document_path(doc), method: :delete, class: "btn btn-error"
 
 %br
-
-= link_to 'New Document', new_document_path, :class => "btn btn-xs btn-primary"
+= paginate @documents
