--- a/app/views/folders/_form.html.haml
+++ b/app/views/folders/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for folder do |f|
+= simple_form_for folder, html: { class: 'form-horizontal' } do |f|
   - if folder.errors.any?
     #error_explanation
       %h2= "#{pluralize(folder.errors.count, "error")} prohibited this folder from being saved:"
