fixes before release

--- a/app/views/documents/index.html.haml
+++ b/app/views/documents/index.html.haml
@@ -17,7 +17,7 @@
         = link_to doc.folder.name, folder_path(doc.folder)
       %td= doc.created_at.to_formatted_s(:long)
       %td
-        = link_to 'Delete', document_path(doc), method: :delete, class: "btn btn-error"
+        = link_to 'Delete', document_path(doc), method: :delete, class: "btn btn-danger"
 
 %br
 = paginate @documents
