--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -10,5 +10,7 @@
       - @users.each do |user|
         %tr
           %td= user.email
-          %td= link_to "Change password", edit_user_path(user), class: "btn"
+          %td
+            = link_to "Change password", edit_user_path(user), class: "btn"
+            = link_to 'Delete', user_path(user), method: :delete, class: "btn btn-danger"
   = paginate @users
