--- a/app/assets/stylesheets/folders.sass
+++ b/app/assets/stylesheets/folders.sass
@@ -5,7 +5,7 @@
   padding: 0
 
 .listing li
-  height: 50px
+  height: 40px
   overflow: hidden
   display: block
   background: #fff
@@ -25,7 +25,7 @@
 
 .listing li a
   text-align: left
-  display: block
+  margin-left: 4px
   width: 100%
   height: 100%
   color: #333
@@ -40,8 +40,9 @@
 .listing li:hover
   border-color: $yellow
   background: #000
+  color: $white
 
-.listing li:hover a
+.listing a:hover
   color: $yellow
   text-shadow: 0px 0px 1px $yellow
   text-decoration: none
@@ -50,7 +51,7 @@
 .btn
   display: inline-block
   padding: 8px 20px
-  font-size: 14
+  font-size: 12px
   background-color: $black
   color: $white
   border-width: 2px !important
@@ -63,7 +64,7 @@
     color: $yellow
 
 .breadcrumb
-  font-size: 18
+  font-size: 22px
 
 .menu_opt
   margin-top: 2px
