--- a/app/views/documents/index.html.haml
+++ b/app/views/documents/index.html.haml
@@ -9,7 +9,10 @@
 
   - @documents.each do |doc|
     %tr
-      %td= file_link(doc)
+      %td
+        = link_to full_link(doc.file_url) do
+          = fa_icon 'file'
+          = doc.file_identifier
       %td
         - doc.folder.ancestors.each do |folder|
           = link_to folder.name, folder_path(folder)
@@ -17,7 +20,9 @@
         = link_to doc.folder.name, folder_path(doc.folder)
       %td= doc.created_at.to_formatted_s(:long)
       %td
-        = link_to 'Delete', document_path(doc), method: :delete, class: "btn btn-danger"
+        .btn-group
+          = link_to 'Edit', edit_document_path(doc), class: "btn btn"
+          = link_to 'Delete', document_path(doc), method: :delete, class: "btn btn-danger"
 
 %br
 = paginate @documents
