--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -7,8 +7,15 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to 'Files', root_path, class: 'navbar-brand'
+      = link_to 'Folders', root_path, class: 'navbar-brand'
     .collapse.navbar-collapse
-      %ul.nav.navbar-nav
-        = render 'layouts/navigation_links'
 
+      - if user_signed_in?
+        %ul.nav.navbar-nav
+          %li= link_to 'Documents', documents_path
+          %li= link_to "Users", users_path
+          %li= link_to 'Logout', destroy_user_session_path, method: :delete
+      - else
+        %ul.nav.navbar-nav.navbar-right
+          %li
+            = link_to 'Administrator only', new_user_session_path
